--- a/src/scss/pages/mainArtcle/_mainArticleAbout.scss
+++ b/src/scss/pages/mainArtcle/_mainArticleAbout.scss
@@ -151,7 +151,7 @@
 }
 
 .read-more {
-  width: max-content;
+  width: 255px;
   padding: 20px 86px;
   border: 1px solid #dee3eb;
   border-radius: 50px;
