--- a/src/scss/pages/mainArtcle/_mainArticleJobs.scss
+++ b/src/scss/pages/mainArtcle/_mainArticleJobs.scss
@@ -92,8 +92,8 @@
   }
 }
 
-.swiper-button-prev,
-.swiper-button-next {
+.jobs-button-prev,
+.jobs-button-next {
   position: relative;
   width: 44px;
   height: 44px;
