--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -13,3 +13,4 @@
 @import "./pages/mainArtcle/*.scss";
 @import "./pages/servicesArticle/*.scss";
 @import "./pages/pageNews/*.scss";
+@import "./pages/pageProject/*.scss";
